--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -4,7 +4,7 @@
 # for detailed .gqlgen.yml documentation.
 
 schema:
-- schema.graphql
+  - schema.graphql
 exec:
   filename: generated.go
 model:
@@ -12,3 +12,8 @@ model:
 resolver:
   filename: resolver.go
   type: Resolver
+models:
+  Item:
+    model: github.com/louistsaitszho/hackernewsgraphql.Item
+  User:
+    model: github.com/louistsaitszho/hackernewsgraphql.User
