Teach gqlgen to see ID as int

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -12,3 +12,7 @@ model:
 resolver:
   filename: resolver.go
   type: Resolver
+models:
+  ID: # The GraphQL type ID is backed by
+    model:
+      - github.com/99designs/gqlgen/graphql.IntID  # An go integer
