--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -15,4 +15,4 @@ resolver:
 models:
   ID: # The GraphQL type ID is backed by
     model:
-      - github.com/99designs/gqlgen/graphql.IntID  # An go integer
+      - github.com/99designs/gqlgen/graphql.IntID
