--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/louistsaitszho/HackerNews-GraphQL#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
     "graphql": "^14.4.2"
   }
 }
