Now I know how to get interface working

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "hngql",
   "version": "1.0.0",
-  "description": "",
+  "description": "Wrap the HackerNews REST API in GraphQL",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/louistsaitszho/HackerNews-GraphQL.git"
   },
-  "author": "",
+  "author": "Louis Tsai",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/louistsaitszho/HackerNews-GraphQL/issues"
@@ -21,5 +21,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
