--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "request": "^2.88.0"
   },
   "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0",
     "nodemon": "^1.19.1"
   }
 }
