Break story resolver out from query resolver

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
+    "loglevel": "^1.6.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   },
