--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/louistsaitszho/HackerNews-GraphQL#readme",
   "dependencies": {
+    "dataloader": "^1.4.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
