--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Wrap the HackerNews REST API in GraphQL",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "nodemon": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
